# IntentionRecognition

./: .gitignore  LICENSE  README.md
system/: README.md
system/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
system/intention_reaction_ws/: README.md
system/intention_reaction_ws/camera calibration/: bew.py  calibration_array.py  camera_pose.launch  frames.gv  joint_states.yaml  new.py  sample.yaml  transformPose
system/intention_reaction_ws/src/panda_intention_reaction/: CMakeLists.txt  package.xml
system/intention_reaction_ws/src/panda_intention_reaction/launch/: panda_intention_reaction.launch
system/intention_reaction_ws/src/panda_intention_reaction/msg/: class_and_position_msgs.msg  joint_msgs.msg  object_msgs.msg
system/intention_reaction_ws/src/panda_intention_reaction/src/: PandaIntentionReaction.py  PublishArray.py  helper.py  objects.py  positions.py  security.py
system/intention_reaction_ws/src/panda_intention_reaction/srv/: gripperJoint.srv  movementSpeed.srv
system/intention_recognition/: .env  README.md  get-data.py  make-detection-from-file.py  make-detection.py  requirements.txt
system/intention_recognition/.ipynb_checkpoints/: makeDetection-checkpoint.ipynb
system/intention_recognition/features/: distance.py  feature_factory.py  head_posture.py  object_detection.py
system/intention_recognition/helper/: check-videos.py  cut_bag.py  environment_data_parser.py  formatter.py  readVideo_safeSolution.py
system/intention_recognition/machine_learning/: machineLearning.py
system/intention_recognition/pose/: pose.py
(+34 files in other folders)
